# zeroutils

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  zeroutils-todo.md
.github/: CODEOWNERS
.github/workflows/: coverage.yml
wit/wasi/: world.wit
zeroutils/: Cargo.toml
zeroutils-cli/: Cargo.toml  README.md
zeroutils-cli/src/: lib.rs  styles.rs
zeroutils-config/: Cargo.toml  README.md
zeroutils-config/src/: default.rs  error.rs  lib.rs  network.rs  traits.rs
zeroutils-did/: Cargo.toml
zeroutils-did-wk/: Cargo.toml  README.md
zeroutils-did-wk/src/: base.rs  builder.rs  did.rs  doc.rs  error.rs  lib.rs  locator.rs  regex.rs  traits.rs
zeroutils-did/src/: lib.rs  traits.rs
zeroutils-did/src/did_key/: mod.rs
zeroutils-did/src/did_wk/: builder.rs  did.rs  locator.rs  mod.rs  regex.rs
zeroutils-ipc/: Cargo.toml  README.md
zeroutils-ipc/src/: error.rs  lib.rs
zeroutils-ipc/src/client/: builder.rs  client.rs  mod.rs  response.rs
zeroutils-key/: Cargo.toml  README.md
zeroutils-key/src/: ed25519.rs  error.rs  jws.rs  key.rs  kind.rs  lib.rs  p256.rs  secp256k1.rs  traits.rs  x25519.rs
zeroutils-key/src/did_wk/: did.rs  mod.rs
zeroutils-path/: Cargo.toml  README.md
zeroutils-path/src/: error.rs  lib.rs  path.rs  segment.rs
zeroutils-store/: Cargo.toml  README.md
zeroutils-store/src/: chunker.rs  disk_ipld_store.rs  diskstore.rs  dualstore.rs  error.rs  ipld_store.rs  ipldstore.rs  layout.rs  lib.rs  lrustore.rs  mem_ipld_store.rs  mem_store.rs  memstore.rs  merkle.rs  plcstore.rs  references.rs  storable.rs  store.rs  utils.rs
zeroutils-store/src/cas/: chunker.rs  error.rs  layout.rs  merkle.rs  mod.rs  references.rs  seekable.rs  storable.rs  store.rs  utils.rs
zeroutils-store/src/cas/impls/: mod.rs
zeroutils-store/src/cas/impls/chunkers/: constants.rs  fixed.rs  mod.rs  rabin.rs
zeroutils-store/src/cas/impls/layouts/: balanced.rs  flat.rs  mod.rs  trickle.rs
zeroutils-store/src/cas/impls/stores/: dualstore.rs  memstore.rs  mod.rs  plcstore.rs
zeroutils-store/src/impls/: lrustore.rs  mod.rs
zeroutils-store/src/impls/chunkers/: fixed.rs  rabin.rs
zeroutils-store/src/impls/layouts/: balanced.rs  flat.rs  mod.rs  trickle.rs
zeroutils-store/src/impls/stores/: dualstore.rs  memstore.rs  plcstore.rs
zeroutils-store/src/las/: mod.rs
zeroutils-ucan/: Cargo.toml  README.md
zeroutils-ucan/src/: auth.rs  authority.rs  builder.rs  capabilities.rs  error.rs  facts.rs  header.rs  lib.rs  payload.rs  proofs.rs  signature.rs  ucan.rs  uri.rs
zeroutils-ucan/src/capabilities/: ability.rs  capability.rs  caveats.rs  definition.rs  macros.rs  mod.rs  uri.rs
zeroutils-ucan/src/resolution/: mod.rs  resolution.rs  resolved.rs  tests.rs  unresolved.rs
zeroutils-ucan/src/resolution/tests/: mod.rs  proptest_chain.rs  test_chain.rs
zeroutils-ucan/src/testgen/: caveats.rs  mod.rs  ucan.rs
zeroutils-ucan/src/ucan/: mod.rs  resolution.rs  ucan.rs
zeroutils-ucan/src/ucan/resolution/: mod.rs  resolution.rs  tests.rs
zeroutils-wasi/: Cargo.toml  README.md
zeroutils-wasi/src/: bindgen.rs  lib.rs  state.rs
zeroutils-wasi/src/io/: error.rs  poll.rs
zeroutils-wasi/src/io/streams/: constant.rs  error.rs  input.rs  mod.rs  output.rs  streams.rs
zeroutils/src/: did_key.rs  lib.rs
zeroutils/src/io/: input.rs  mod.rs  output.rs
zeroutils/src/wasi/: bindgen.rs  mod.rs
zeroutils/src/wasi/io/: error.rs  mod.rs  poll.rs
zeroutils/src/wasi/io/streams/: error.rs  input.rs  output.rs  streams.rs
