[workspace]
members = ["zeroutils"]
resolver = "2"

[workspace.package]
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/zerocore-ai/zeroutils"
authors = ["Stephen Akinyemi <steve@zerocore.ai>"]
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.79"
async-trait = "0.1.77"
bytes = "1.6.0"
clap = { version = "4.4.11", features = ["derive", "color"] }
did-key = "0.2.1"
futures = "0.3.30"
semver = { version = "1.0.20", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
structstruck = "0.4.1"
thiserror = "1.0.59"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "net"] }
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
typed-builder = "0.18.0"
ucan = "0.4.0"
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", rev = "080994cf5", features = [
    "component-model",
    "async",
] }
