[workspace]
members = [
    # "zeroutils-config",
    "zeroutils-store",
    # "zeroutils-key",
    # "zeroutils-ucan",
    "zeroutils-wasi",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/zerocore-ai/zeroutils"
authors = ["Stephen Akinyemi <steve@zerocore.ai>"]
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.79"
async-stream = "0.3.5"
async-trait = "0.1.80"
libipld = "0.16.0"
bytes = "1.6.0"
futures = "0.3.30"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "net"] }
