[workspace]
members = [
    "zeroutils-config",
    "zeroutils-did-wk",
    "zeroutils-key",
    "zeroutils-store",
    "zeroutils-ucan",
    "zeroutils-wasi",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/zerocore-ai/zeroutils"
authors = ["Stephen Akinyemi <steve@zerocore.ai>"]
edition = "2021"

[workspace.dependencies]
async-stream = "0.3.5"
async-trait = "0.1.77"
anyhow = "1.0.86"
bytes = "1.6.0"
futures = "0.3.30"
libipld = "0.16.0"
regex = "1.10.4"
serde = { version = "1.0.194", features = ["derive"] }
test-log = { version = "0.2.14", features = ["trace"] }
thiserror = "1.0.56"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
lazy_static = "1.4.0"
