[package]
name = "zeroutils-config"
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
serde.workspace = true
structstruck = "0.4.1"
zeroutils-did-wk = { version = "0.1.0", path = "../zeroutils-did-wk" }

[dev-dependencies]
toml = "0.8.12"
