[package]
name = "zeroutils-config"
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
rand = "0.8.5"
serde.workspace = true
structstruck = "0.4.1"
thiserror.workspace = true
toml = "0.8.12"
typed-builder = "0.18.2"
zeroutils-did-wk = { version = "0.1.0", path = "../zeroutils-did-wk" }
zeroutils-key = { version = "0.1.0", path = "../zeroutils-key" }

[dev-dependencies]
toml = "0.8.12"
