[package]
name = "zeroutils-did"
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
readme = "README.md"

[dependencies]
anyhow.workspace = true
lazy_static = "1.4.0"
multibase = "0.9.1"
regex.workspace = true
serde.workspace = true
test-log.workspace = true
thiserror.workspace = true
tracing.workspace = true
zeroutils-key = { version = "0.1.0", path = "../zeroutils-key" }

[dev-dependencies]
rand = "0.8.5"
serde_json = "1.0.116"
