[package]
name = "zeroutils-key"
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
readme = "README.md"

[dependencies]
anyhow.workspace = true
curve25519-dalek = "4.1.2"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
lazy_static.workspace = true
libsecp256k1 = "0.7.1"
p256 = { version = "0.13.2", features = ["ecdsa", "ecdh"] }
rand_core = "0.6.4"
serde.workspace = true
serde_json = "1.0.119"
sha2 = "0.10.8"
test-log.workspace = true
thiserror.workspace = true
tracing.workspace = true
x25519-dalek = "2.0.1"

[dev-dependencies]
rand = "0.8.5"
