[package]
name = "zeroutils-path"
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
readme = "README.md"

[dependencies]
anyhow.workspace = true
lazy_static.workspace = true
regex.workspace = true
serde.workspace = true
thiserror.workspace = true
