[package]
name = "zeroutils-store"
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
bytes.workspace = true
futures.workspace = true
libipld = { workspace = true, features = ["serde-codec"] }
serde = { workspace = true, features = ["derive"] }
serde_ipld_dagcbor = "0.6.1"
serde_ipld_dagjson = "0.2.0"
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
