[package]
name = "zeroutils-ucan"
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
base64 = "0.22.1"
fluent-uri = "0.1.4"
libipld.workspace = true
serde.workspace = true
serde_json = "1.0.116"
test-log.workspace = true
thiserror.workspace = true
tracing.workspace = true
zeroutils-did-wk = { version = "0.1.0", path = "../zeroutils-did-wk" }
zeroutils-key = { version = "0.1.0", path = "../zeroutils-key" }
zeroutils-store = { version = "0.1.0", path = "../zeroutils-store" }

[dev-dependencies]
rand = "0.8.5"
serde_json = "1.0.116"
