[package]
name = "zeroutils-ucan"
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
edition.workspace = true
readme = "README.md"

[dependencies]
anyhow.workspace = true
async-once-cell = "0.5.3"
async-recursion = "1.1.1"
base64 = "0.22.1"
either = "1.12.0"
fluent-uri = "0.1.4"
itertools = "0.13.0"
lazy_static = "1.4.0"
libipld.workspace = true
proptest = "1.4.0"
regex.workspace = true
serde.workspace = true
serde_json = "1.0.116"
test-log.workspace = true
test-strategy = "0.3.1"
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
zeroutils-did-wk = { path = "../zeroutils-did-wk" }
zeroutils-key = { path = "../zeroutils-key" }
zeroutils-store = { path = "../zeroutils-store" }

[dev-dependencies]
rand = "0.8.5"
serde_json = "1.0.116"
